<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ef_permission_write_external_rationale">Allow access external storage to select images</string>

    <string name="ef_ok">OK</string>
    <string name="ef_done">DONE</string>
    <string name="ef_camera">CAMERA</string>

    <string name="ef_title_folder">Folder</string>
    <string name="ef_title_select_image">Tap to select images</string>
    <string name="ef_ltitle_permission_denied">Permission denied</string>
    <string name="ef_search_query">Search</string>
    <string name="ef_nothing_found">Nothing found</string>

    <string name="ef_title_sort">Sort</string>
    <string name="ef_title_sort_name">Name</string>
    <string name="ef_title_sort_num">Number</string>
    <string name="ef_title_sort_type">Type</string>
    <string name="ef_title_sort_date">Date</string>
    <string name="ef_title_sort_size">Size</string>

    <string name="ef_selected">%d selected</string>
    <string name="ef_selected_with_limit">%1$d/%2$d selected</string>

    <string name="ef_error_create_image_file">Failed to create image file</string>
    <string name="ef_error_no_camera">No camera found</string>
    <string name="ef_error_null_cursor">Oops, something went wrong!</string>

    <string name="ef_msg_empty_images">No images found</string>
    <string name="ef_msg_no_write_external_permission">Please grant storage permission to select images</string>
    <string name="ef_msg_limit_images">Image selection limit</string>
    <string name="ef_msg_no_camera_permission">You have to give the app permission to use the camera to be able to take pictures</string>

    <!--Don't Translate-->
    <string name="ef_gif" translatable="false">GIF</string>
    <string name="ef_content_desc_folder" translatable="false">Folder</string>
    <string name="ef_content_desc_image" translatable="false">Image</string>

</resources>
