<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search"
        android:title="@string/ef_search_query"
        android:icon="@drawable/ef_ic_search_white"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/menu_sort"
        android:title="@string/ef_title_sort"
        android:icon="@drawable/ef_ic_sort_white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_camera"
        android:icon="@drawable/ef_ic_camera_white"
        android:title="@string/ef_camera"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_done"
        android:title="@string/ef_done"
        app:showAsAction="always" />
</menu>
